--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
     "@types/express": "5.0.0",
     "@types/node": "22.10.7",
     "typescript": "5.7.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node dist/app.js",
+    "dev": "tsc && node dist/app.js"
   }
 }
